// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Login > render > Should render as expected 1`] = `
<div>
  <div
    class="container-fluid d-flex flex-column"
    id="login-screen"
  >
    <div
      class="row row-cols-auto align-items-center justify-content-center"
      id="landing"
    >
      <div
        class="col-8 col-md-6 text-center align-self-end align-self-md-center"
      >
        <div
          class="text-center pb-1"
        >
          <div>
            <img
              alt="Logo"
              class="login-logo w-50 mx-auto mb-3"
              src="/code-whisperer/src/assets/new-logo.svg"
            />
          </div>
          <h2
            class="text-center mb-0"
          >
            Code Whisperer
          </h2>
          <div
            class="text-center fs-6"
          >
            <small>
              Version 0.0.0
            </small>
          </div>
        </div>
      </div>
      <div
        class="col-9 col-md-6 text-center align-self-start align-self-md-center"
      >
        <a
          class="btn btn-sm fs-2 py-2 px-3 rounded-4 bg-gradient"
          href="https://id.twitch.tv/oauth2/authorize?client_id=VITE_APP_TWITCH_CLIENT_ID&response_type=code&scope=chat:read chat:edit moderation:read user:manage:whispers moderator:read:chatters user:read:moderated_channels channel:read:vips channel:read:editors moderator:manage:announcements user:read:subscriptions&redirect_uri=VITE_APP_REDIRECT_URI"
        >
          Log In With 
          <strong>
            Twitch
          </strong>
        </a>
        <div
          class="text-center fs-6"
        >
          <button
            class="btn btn-sm btn-link link-secondary text-decoration-none"
          >
            Having issues? 
            <span
              class="with-checkmark"
            >
              Reset application data
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Login > render > Should render with error during development 1`] = `
<div>
  <div
    class="container-fluid d-flex flex-column"
    id="login-screen"
  >
    <div
      class="row row-cols-auto align-items-center justify-content-center"
      id="landing"
    >
      <div
        class="col-8 col-md-6 text-center align-self-end align-self-md-center"
      >
        <div
          class="text-center pb-1"
        >
          <div>
            <img
              alt="Logo"
              class="login-logo w-50 mx-auto mb-3"
              src="/code-whisperer/src/assets/new-logo.svg"
            />
          </div>
          <h2
            class="text-center mb-0"
          >
            Code Whisperer
          </h2>
          <div
            class="text-center fs-6"
          >
            <small>
              Version 0.0.0
            </small>
          </div>
        </div>
      </div>
      <div
        class="col-9 col-md-6 text-center align-self-start align-self-md-center"
      >
        <div>
          <code
            class="small w-50 fs-6 mb-3"
          >
            Error: 
            Error Message
          </code>
        </div>
        <a
          class="btn btn-sm fs-2 py-2 px-3 rounded-4 bg-gradient"
          href="https://id.twitch.tv/oauth2/authorize?client_id=VITE_APP_TWITCH_CLIENT_ID&response_type=code&scope=chat:read chat:edit moderation:read user:manage:whispers moderator:read:chatters user:read:moderated_channels channel:read:vips channel:read:editors moderator:manage:announcements user:read:subscriptions&redirect_uri=VITE_APP_REDIRECT_URI"
        >
          Log In With 
          <strong>
            Twitch
          </strong>
        </a>
        <div
          class="text-center fs-6"
        >
          <button
            class="btn btn-sm btn-link link-secondary text-decoration-none"
          >
            Having issues? 
            <span
              class="with-checkmark"
            >
              Reset application data
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Login > render > Should render without error in production 1`] = `
<div>
  <div
    class="container-fluid d-flex flex-column"
    id="login-screen"
  >
    <div
      class="row row-cols-auto align-items-center justify-content-center"
      id="landing"
    >
      <div
        class="col-8 col-md-6 text-center align-self-end align-self-md-center"
      >
        <div
          class="text-center pb-1"
        >
          <div>
            <img
              alt="Logo"
              class="login-logo w-50 mx-auto mb-3"
              src="/code-whisperer/src/assets/new-logo.svg"
            />
          </div>
          <h2
            class="text-center mb-0"
          >
            Code Whisperer
          </h2>
          <div
            class="text-center fs-6"
          >
            <small>
              Version 0.0.0
            </small>
          </div>
        </div>
      </div>
      <div
        class="col-9 col-md-6 text-center align-self-start align-self-md-center"
      >
        <div>
          <code
            class="small w-50 fs-6 mb-3"
          >
            Error: 
            Error Message
          </code>
        </div>
        <a
          class="btn btn-sm fs-2 py-2 px-3 rounded-4 bg-gradient"
          href="https://id.twitch.tv/oauth2/authorize?client_id=VITE_APP_TWITCH_CLIENT_ID&response_type=code&scope=chat:read chat:edit moderation:read user:manage:whispers moderator:read:chatters user:read:moderated_channels channel:read:vips channel:read:editors moderator:manage:announcements user:read:subscriptions&redirect_uri=VITE_APP_REDIRECT_URI"
        >
          Log In With 
          <strong>
            Twitch
          </strong>
        </a>
        <div
          class="text-center fs-6"
        >
          <button
            class="btn btn-sm btn-link link-secondary text-decoration-none"
          >
            Having issues? 
            <span
              class="with-checkmark"
            >
              Reset application data
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
